Added basic design + structure

--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
   <meta charset="UTF-8" />
   <title>Felix Seggebäing</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
-  <div class="info-box">
-    <p>Hier kann man bald etwas sehen!</p>
+  <div class="content">
+    <h>Felix Seggebäing</h>
+
+    <div class="menu-button" id="menuButton">
+      <div class="bar top"></div>
+      <div class="bar middle"></div>
+      <div class="bar bottom"></div>
+    </div>
+
+    <p>Willkommen auf meiner Webseite!</p>
+    <p>
+      Aktuell ist hier leider noch nicht so viel los und viele Links führen noch nirgendwo hin. Aber das soll sich bald
+      ändern, ich arbeite aktiv dran! Wenn Dich der Fortschritt interessiert, schau doch gerne mal in mein 
+      <a href="https://github.com/felixsegg" target="_blank">GitHub</a> rein, da findest Du das Projekt dieser Seite.
+    </p>
+
+    <nav class="side-menu" id="sideMenu">
+      <ul>
+        <li><a href="#">Geschäftliches</a></li>
+        <li><a href="#">Persönliches</a></li>
+        <li><a href="#">Lebenslauf</a></li>
+        <li><a href="#">Spielereien</a></li>
+        <li><a href="#">Externe Links</a></li>
+      </ul>
+    </nav>
   </div>
+
+  <div class="footer-links">
+    <a href="#">Impressum</a>
+    <a href="#">Kontakt</a>
+  </div>
+
+  <script src="js/script.js"></script>
 </body>
+
 </html>
