--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <title>Felix Seggebäing</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="icon" type="image/png" href="/assets/icons/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/assets/icons/favicon.svg" />
+  <link rel="shortcut icon" href="/assets/icons/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="Felix Seggebäing" />
+  <link rel="manifest" href="manifest.webmanifest" />
 </head>
 
 <body>
@@ -21,7 +27,7 @@
     <p>Willkommen auf meiner Webseite!</p>
     <p>
       Aktuell ist hier leider noch nicht so viel los und viele Links führen noch nirgendwo hin. Aber das soll sich bald
-      ändern, ich arbeite aktiv dran! Wenn Dich der Fortschritt interessiert, schau doch gerne mal in mein 
+      ändern, ich arbeite aktiv dran! Wenn Dich der Fortschritt interessiert, schau doch gerne mal in mein
       <a href="https://github.com/felixsegg" target="_blank">GitHub</a> rein, da findest Du das Projekt dieser Seite.
     </p>
 
