--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="content">
-    <h>Felix Seggebäing</h>
+    <h1>Felix Seggebäing</h1>
 
     <div class="menu-button" id="menuButton">
       <div class="bar top"></div>
@@ -43,7 +43,7 @@
   </div>
 
   <div class="footer-links">
-    <a href="#">Impressum</a>
+    <a href="/legal/impressum/">Impressum</a>
     <a href="#">Kontakt</a>
   </div>
 
