--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <title>Felix Seggebäing</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/css/fonts.css">
+  <link rel="stylesheet" href="/css/style.css" />
   <link rel="icon" type="image/png" href="/assets/icons/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/icons/favicon.svg" />
   <link rel="shortcut icon" href="/assets/icons/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="Felix Seggebäing" />
-  <link rel="manifest" href="manifest.webmanifest" />
+  <link rel="manifest" href="/manifest.webmanifest" />
 </head>
 
 <body>
@@ -33,6 +33,7 @@
 
     <nav class="side-menu" id="sideMenu">
       <ul>
+        <li><a href="/">Home</a></li>
         <li><a href="#">Geschäftliches</a></li>
         <li><a href="#">Persönliches</a></li>
         <li><a href="#">Lebenslauf</a></li>
