Added external links

--- a/legal/impressum/index.html
+++ b/legal/impressum/index.html
@@ -73,7 +73,7 @@
                 <li><a href="#">Persönliches</a></li>
                 <li><a href="#">Lebenslauf</a></li>
                 <li><a href="#">Spielereien</a></li>
-                <li><a href="#">Externe Links</a></li>
+                <li><a href="/links/">Externe Links</a></li>
             </ul>
         </nav>
     </div>
