--- a/links/index.html
+++ b/links/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="content">
-    <h1>Felix Seggebäing</h1>
+    <h1>Externe Links</h1>
 
     <div class="menu-button" id="menuButton">
       <div class="bar top"></div>
@@ -24,12 +24,16 @@
       <div class="bar bottom"></div>
     </div>
 
-    <p>Willkommen auf meiner Webseite!</p>
-    <p>
-      Aktuell ist hier leider noch nicht so viel los und viele Links führen noch nirgendwo hin. Aber das soll sich bald
-      ändern, ich arbeite aktiv dran! Wenn Dich der Fortschritt interessiert, schau doch gerne mal in mein
-      <a href="https://github.com/felixsegg" target="_blank">GitHub</a> rein, da findest Du das Projekt dieser Seite.
-    </p>
+    <div class="social-links">
+      <a class="social-button" href="https://github.com/felixsegg" target="_blank">
+        <img src="/assets/icons/github-white.svg" class="logo-dark" alt="GitHub">
+        <img src="/assets/icons/github-black.svg" class="logo-light" alt="GitHub">
+      </a>
+      <a class="social-button" href="https://www.linkedin.com/in/felix-seggeb%C3%A4ing-a669a0374/" target="_blank">
+        <img src="/assets/icons/InBug-White.png" class="logo-dark" alt="LinkedIn">
+        <img src="/assets/icons/InBug-Blue.png" class="logo-light" alt="LinkedIn">
+      </a>
+    </div>
 
     <nav class="side-menu" id="sideMenu">
       <ul>
