--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <a href="#">Kontakt</a>
   </div>
 
-  <script src="js/script.js"></script>
+  <script src="/js/script.js"></script>
 </body>
 
 </html>
