--- a/legal/impressum/index.html
+++ b/legal/impressum/index.html
@@ -83,7 +83,7 @@
         <a href="#">Kontakt</a>
     </div>
 
-    <script src="../../js/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
