Added contact page and thesis menu item

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li><a href="#">Geschäftliches</a></li>
         <li><a href="#">Persönliches</a></li>
         <li><a href="#">Lebenslauf</a></li>
+        <li><a href="#">Bachelorarbeit</a></li>
         <li><a href="#">Spielereien</a></li>
         <li><a href="/links/">Externe Links</a></li>
       </ul>
@@ -45,7 +46,7 @@
 
   <div class="footer-links">
     <a href="/legal/impressum/">Impressum</a>
-    <a href="#">Kontakt</a>
+    <a href="/contact/">Kontakt</a>
   </div>
 
   <script src="/js/script.js"></script>
