--- a/legal/impressum/index.html
+++ b/legal/impressum/index.html
@@ -72,6 +72,7 @@
                 <li><a href="#">Geschäftliches</a></li>
                 <li><a href="#">Persönliches</a></li>
                 <li><a href="#">Lebenslauf</a></li>
+                <li><a href="#">Bachelorarbeit</a></li>
                 <li><a href="#">Spielereien</a></li>
                 <li><a href="/links/">Externe Links</a></li>
             </ul>
@@ -79,8 +80,8 @@
     </div>
 
     <div class="footer-links">
-        <a href="#">Impressum</a>
-        <a href="#">Kontakt</a>
+        <a href="/legal/impressum/">Impressum</a>
+        <a href="/contact/">Kontakt</a>
     </div>
 
     <script src="/js/script.js"></script>
