Added theses page

--- a/contact/index.html
+++ b/contact/index.html
@@ -35,7 +35,7 @@
                 <li><a href="#">Geschäftliches</a></li>
                 <li><a href="#">Persönliches</a></li>
                 <li><a href="#">Lebenslauf</a></li>
-                <li><a href="#">Bachelorarbeit</a></li>
+                <li><a href="/theses/">Abschlussarbeiten</a></li>
                 <li><a href="#">Spielereien</a></li>
                 <li><a href="/links/">Externe Links</a></li>
             </ul>
