--- a/theses/index.html
+++ b/theses/index.html
@@ -16,24 +16,30 @@
 
 <body>
   <div class="content">
-    <h1>Externe Links</h1>
-
     <div class="menu-button" id="menuButton">
       <div class="bar top"></div>
       <div class="bar middle"></div>
       <div class="bar bottom"></div>
     </div>
 
-    <div class="social-links">
-      <a class="social-button" href="https://github.com/felixsegg" target="_blank">
-        <img src="/assets/icons/github-white.svg" class="logo-dark" alt="GitHub">
-        <img src="/assets/icons/github-black.svg" class="logo-light" alt="GitHub">
-      </a>
-      <a class="social-button" href="https://www.linkedin.com/in/felix-seggeb%C3%A4ing-a669a0374/" target="_blank">
-        <img src="/assets/icons/InBug-White.png" class="logo-dark" alt="LinkedIn">
-        <img src="/assets/icons/InBug-Blue.png" class="logo-light" alt="LinkedIn">
-      </a>
-    </div>
+    <h1>Abschlussarbeiten</h1>
+    <p>
+      Hier findest Du meine Abschlussarbeiten.
+    </p>
+
+    <h2>Bachelorarbeit</h2>
+    <p>
+      Mein Bachelorarbeit liegt gerade noch meinen Betreuern zur Begutachtung vor. Bitte gedulde dich noch ein wenig,
+      bis ich die finale Bewertung erhalten habe, dann werde ich sie hier bereitstellen! <br>
+      Die Bewertung sollte bis spätestens Mitte August 2025 erfolgt sein.
+    </p>
+
+    <hr>
+
+    <h2>Masterarbeit</h2>
+    <p>...das dauert noch ein paar Semester ;)</p>
+
+
 
     <nav class="side-menu" id="sideMenu">
       <ul>
@@ -41,7 +47,7 @@
         <li><a href="#">Geschäftliches</a></li>
         <li><a href="#">Persönliches</a></li>
         <li><a href="#">Lebenslauf</a></li>
-        <li><a href="/theses/">Abschlussarbeiten</a></li>
+        <li><a href="#">Abschlussarbeiten</a></li>
         <li><a href="#">Spielereien</a></li>
         <li><a href="/links/">Externe Links</a></li>
       </ul>
