Added js include functionality to prevent redundant code for menu and footers

--- a/contact/index.html
+++ b/contact/index.html
@@ -18,35 +18,12 @@
     <div class="content">
         <h1>Kontakt</h1>
 
-        <div class="menu-button" id="menuButton">
-            <div class="bar top"></div>
-            <div class="bar middle"></div>
-            <div class="bar bottom"></div>
-        </div>
-
-        <p>
-            Schreib mir gerne eine E-Mail:
-        </p>
+        <p>Schreib mir gerne eine E-Mail:</p>
         <a href="mailto:felix@seggebaeing.de">felix(at)seggebaeing.de</a>
-
-        <nav class="side-menu" id="sideMenu">
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="#">Geschäftliches</a></li>
-                <li><a href="#">Persönliches</a></li>
-                <li><a href="#">Lebenslauf</a></li>
-                <li><a href="/theses/">Abschlussarbeiten</a></li>
-                <li><a href="#">Spielereien</a></li>
-                <li><a href="/links/">Externe Links</a></li>
-            </ul>
-        </nav>
+        <div id="menu"></div>
     </div>
 
-    <div class="footer-links">
-        <a href="/legal/impressum/">Impressum</a>
-        <a href="/contact/">Kontakt</a>
-    </div>
-
+    <div id="footer"></div>
     <script src="/js/script.js"></script>
 </body>
 
