--- a/index.html
+++ b/index.html
@@ -18,12 +18,6 @@
   <div class="content">
     <h1>Felix Seggebäing</h1>
 
-    <div class="menu-button" id="menuButton">
-      <div class="bar top"></div>
-      <div class="bar middle"></div>
-      <div class="bar bottom"></div>
-    </div>
-
     <p>Willkommen auf meiner Webseite!</p>
     <p>
       Aktuell ist hier leider noch nicht so viel los und viele Links führen noch nirgendwo hin. Aber das soll sich bald
@@ -31,23 +25,10 @@
       <a href="https://github.com/felixsegg" target="_blank">GitHub</a> rein, da findest Du das Projekt dieser Seite.
     </p>
 
-    <nav class="side-menu" id="sideMenu">
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="#">Geschäftliches</a></li>
-        <li><a href="#">Persönliches</a></li>
-        <li><a href="#">Lebenslauf</a></li>
-        <li><a href="/theses/">Abschlussarbeiten</a></li>
-        <li><a href="#">Spielereien</a></li>
-        <li><a href="/links/">Externe Links</a></li>
-      </ul>
-    </nav>
+    <div id="menu"></div>
   </div>
-
-  <div class="footer-links">
-    <a href="/legal/impressum/">Impressum</a>
-    <a href="/contact/">Kontakt</a>
-  </div>
+  
+  <div id="footer"></div>
 
   <script src="/js/script.js"></script>
 </body>
