--- a/links/index.html
+++ b/links/index.html
@@ -17,13 +17,6 @@
 <body>
   <div class="content">
     <h1>Externe Links</h1>
-
-    <div class="menu-button" id="menuButton">
-      <div class="bar top"></div>
-      <div class="bar middle"></div>
-      <div class="bar bottom"></div>
-    </div>
-
     <div class="social-links">
       <a class="social-button" href="https://github.com/felixsegg" target="_blank">
         <img src="/assets/icons/github-white.svg" class="logo-dark" alt="GitHub">
@@ -34,24 +27,10 @@
         <img src="/assets/icons/InBug-Blue.png" class="logo-light" alt="LinkedIn">
       </a>
     </div>
-
-    <nav class="side-menu" id="sideMenu">
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="#">Geschäftliches</a></li>
-        <li><a href="#">Persönliches</a></li>
-        <li><a href="#">Lebenslauf</a></li>
-        <li><a href="/theses/">Abschlussarbeiten</a></li>
-        <li><a href="#">Spielereien</a></li>
-        <li><a href="/links/">Externe Links</a></li>
-      </ul>
-    </nav>
+    <div id="menu"></div>
   </div>
 
-  <div class="footer-links">
-    <a href="/legal/impressum/">Impressum</a>
-    <a href="/contact/">Kontakt</a>
-  </div>
+  <div id="footer"></div>
 
   <script src="/js/script.js"></script>
 </body>
