--- a/theses/index.html
+++ b/theses/index.html
@@ -16,12 +16,6 @@
 
 <body>
   <div class="content">
-    <div class="menu-button" id="menuButton">
-      <div class="bar top"></div>
-      <div class="bar middle"></div>
-      <div class="bar bottom"></div>
-    </div>
-
     <h1>Abschlussarbeiten</h1>
     <p>
       Hier findest Du meine Abschlussarbeiten.
@@ -39,25 +33,10 @@
     <h2>Masterarbeit</h2>
     <p>...das dauert noch ein paar Semester ;)</p>
 
-
-
-    <nav class="side-menu" id="sideMenu">
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="#">Geschäftliches</a></li>
-        <li><a href="#">Persönliches</a></li>
-        <li><a href="#">Lebenslauf</a></li>
-        <li><a href="#">Abschlussarbeiten</a></li>
-        <li><a href="#">Spielereien</a></li>
-        <li><a href="/links/">Externe Links</a></li>
-      </ul>
-    </nav>
+    <div id="menu"></div>
   </div>
-
-  <div class="footer-links">
-    <a href="/legal/impressum/">Impressum</a>
-    <a href="/contact/">Kontakt</a>
-  </div>
+  
+  <div id="footer"></div>
 
   <script src="/js/script.js"></script>
 </body>
