--- a/legal/impressum/index.html
+++ b/legal/impressum/index.html
@@ -13,17 +13,9 @@
     <meta name="apple-mobile-web-app-title" content="Felix Seggebäing" />
     <link rel="manifest" href="/manifest.webmanifest" />
 </head>
-
 <body>
     <div class="content">
         <h1>Impressum</h1>
-
-        <div class="menu-button" id="menuButton">
-            <div class="bar top"></div>
-            <div class="bar middle"></div>
-            <div class="bar bottom"></div>
-        </div>
-
         <h2>Adresse</h2>
         <p>
             Felix Seggebäing<br>
@@ -66,24 +58,10 @@
             personenbezogenen Daten gespeichert oder weiterverarbeitet.
         </p>
 
-        <nav class="side-menu" id="sideMenu">
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="#">Geschäftliches</a></li>
-                <li><a href="#">Persönliches</a></li>
-                <li><a href="#">Lebenslauf</a></li>
-                <li><a href="/theses/">Abschlussarbeiten</a></li>
-                <li><a href="#">Spielereien</a></li>
-                <li><a href="/links/">Externe Links</a></li>
-            </ul>
-        </nav>
-    </div>
-
-    <div class="footer-links">
-        <a href="/legal/impressum/">Impressum</a>
-        <a href="/contact/">Kontakt</a>
-    </div>
-
+    <div id="menu"></div>
+  </div>
+  
+  <div id="footer"></div>
     <script src="/js/script.js"></script>
 </body>
 
