Minor typo corrections

--- a/theses/index.html
+++ b/theses/index.html
@@ -23,7 +23,7 @@
 
     <h2>Bachelorarbeit</h2>
     <p>
-      Mein Bachelorarbeit liegt gerade noch meinen Betreuern zur Begutachtung vor. Bitte gedulde dich noch ein wenig,
+      Meine Bachelorarbeit liegt gerade noch meinen Betreuern zur Begutachtung vor. Bitte gedulde Dich noch ein wenig,
       bis ich die finale Bewertung erhalten habe, dann werde ich sie hier bereitstellen! <br>
       Die Bewertung sollte bis spätestens Mitte August 2025 erfolgt sein.
     </p>
