--- a/business/index.html
+++ b/business/index.html
@@ -16,18 +16,13 @@
 
 <body>
   <div class="content">
-    <h1>Felix Seggebäing</h1>
-
-    <p>Willkommen auf meiner Webseite!</p>
+    <h1>Geschäftliches</h1>
     <p>
-      Aktuell ist hier leider noch nicht so viel los. Aber das soll sich bald ändern, ich arbeite aktiv dran! Wenn Dich
-      der Fortschritt interessiert, schau doch gerne mal in mein <a href="https://github.com/felixsegg"
-        target="_blank">GitHub</a> rein, da findest Du das Projekt dieser Seite.
+      Hier werden Infos zu meiner Arbeit im professionellen Kontext stehen, sobald es dazu ein bisschen mehr zu berichten gibt.
     </p>
-
     <div id="menu"></div>
   </div>
-
+  
   <div id="footer"></div>
 
   <script src="/js/script.js"></script>
