--- a/gimmicks/index.html
+++ b/gimmicks/index.html
@@ -16,13 +16,14 @@
 
 <body>
   <div class="content">
-    <h1>Title</h1>
+    <h1>Spielereien</h1>
     <p>
-      Platzhalter
+      Hier werden bald ein paar kleinere Spielereien verfügbar sein die ich entwickelt habe, wie im Browser ausführbare
+      JavaScript-Anwendungen und HTML5-Spiele.
     </p>
     <div id="menu"></div>
   </div>
-  
+
   <div id="footer"></div>
 
   <script src="/js/script.js"></script>
