Made website bilingual

--- a/contact/index.html
+++ b/contact/index.html
@@ -16,9 +16,10 @@
 
 <body>
     <div class="content">
-        <h1>Kontakt</h1>
+    <div id="lang-toggle" class="lang-switch"></div>
+        <h1 id="title"></h1>
 
-        <p>Schreib mir gerne eine E-Mail:</p>
+        <p id="content"></p>
         <a href="mailto:felix@seggebaeing.de">felix(at)seggebaeing.de</a>
         <div id="menu"></div>
     </div>
