--- a/cv/index.html
+++ b/cv/index.html
@@ -16,63 +16,62 @@
 
 <body>
   <div class="content">
-    <h1>Lebenslauf</h1>
+    <div id="lang-toggle" class="lang-switch"></div>
+
+    <h1 id="title"></h1>
 
     <div class="cv content">
       <div class="element">
-        <div class="year">2019-2025</div>
+        <div class="year" id="year-5"></div>
         <div class="info">
-          <div class="title">B. Sc. Informatik</div>
-          <div class="location">Universität Bonn</div>
-          <div class="desc">Der Fokus meines Studiums lag auf Anwendungsentwicklung, Datenbanken und Mathematik. Im Nebenfach habe ich Module aus den Fachrichtungen Physik, Chemie und molekularer Biomedizin belegt.</div>
-        </div>
-      </div>      
-
-      <div class="element">
-        <div class="year">2021-2025</div>
-        <div class="info">
-          <div class="title">IT-Support</div>
-          <div class="location">Hochschulrechenzentrum der Universität Bonn</div>
-          <div class="desc">Im Rahmen der Anstellung habe ich Angestellte und Studierende der Universität bei technischen Schwierigkeiten persönlich, telefonisch und per E-Mail betreut.</div>
+          <div class="title" id="element-title-5"></div>
+          <div class="location" id="location-5"></div>
+          <div class="desc" id="desc-5"></div>
         </div>
       </div>
 
       <div class="element">
-        <div class="year">2022-2024</div>
+        <div class="year" id="year-4"></div>
         <div class="info">
-          <div class="title">Tutor &#8222;Datenzentrierte Informatik&#8220;</div>
-          <div class="location">Institut für Informatik der Universität Bonn</div>
-          <div class="desc">Als Tutor habe ich Studierende unterrichtet, Abgaben bewertet, Prüfungen beaufsichtigt und Klausuren korrigiert. Fokus auf SQL, Datenbankentwurf und Data Science.</div>
+          <div class="title" id="element-title-4"></div>
+          <div class="location" id="location-4"></div>
+          <div class="desc" id="desc-4"></div>
         </div>
       </div>
 
       <div class="element">
-        <div class="year">2018-2021</div>
+        <div class="year" id="year-3"></div>
         <div class="info">
-          <div class="title">Verschiedene Nebenjobs</div>
-          <div class="location">Coesfeld</div>
-          <div class="desc">Nebenjobs während der Schulzeit und zu Beginn des Studiums zur finanziellen Unterstützung, u. a. als Barkeeper (Fabrik Coesfeld) und Pizzabäcker (Pizzeria Calzone).</div>
+          <div class="title" id="element-title-3"></div>
+          <div class="location" id="location-3"></div>
+          <div class="desc" id="desc-3"></div>
         </div>
       </div>
 
       <div class="element">
-        <div class="year">2019</div>
+        <div class="year" id="year-2"></div>
         <div class="info">
-          <div class="title">Allgemeine Hochschulreife</div>
-          <div class="location">Gymnasium Nepomucenum Coesfeld</div>
-          <div class="desc">Leistungskurse Mathematik und Informatik. Schriftliches Prüfungsfach Englisch, mündlich
-            Geschichte.</div>
+          <div class="title" id="element-title-2"></div>
+          <div class="location" id="location-2"></div>
+          <div class="desc" id="desc-2"></div>
         </div>
       </div>
 
       <div class="element">
-        <div class="year">2017</div>
+        <div class="year" id="year-1"></div>
         <div class="info">
-          <div class="title">Praktikum Anwendungsentwicklung</div>
-          <div class="location">Institut für Geoinformatik Münster</div>
-          <div class="desc">Dreiwöchiges Schülerpraktikum. Im Praktikum habe ich im Team der Anwendungsentwicklung
-            mitgearbeitet und eine Webanwendung entwickelt, die Wetterdaten aus Online-APIs ausliest und ausgewertet
-            darstellt.</div>
+          <div class="title" id="element-title-1"></div>
+          <div class="location" id="location-1"></div>
+          <div class="desc" id="desc-1"></div>
+        </div>
+      </div>
+
+      <div class="element">
+        <div class="year" id="year-0"></div>
+        <div class="info">
+          <div class="title" id="element-title-0"></div>
+          <div class="location" id="location-0"></div>
+          <div class="desc" id="desc-0"></div>
         </div>
       </div>
     </div>
