--- a/gadgets/index.html
+++ b/gadgets/index.html
@@ -16,11 +16,9 @@
 
 <body>
   <div class="content">
-    <h1>Spielereien</h1>
-    <p>
-      Hier werden bald ein paar kleinere Spielereien verfügbar sein die ich entwickelt habe, wie im Browser ausführbare
-      JavaScript-Anwendungen und HTML5-Spiele.
-    </p>
+    <div id="lang-toggle" class="lang-switch"></div>
+    <h1 id="title"></h1>
+    <p id="content"></p>
     <div id="menu"></div>
   </div>
 
