--- a/home/index.html
+++ b/home/index.html
@@ -16,15 +16,9 @@
 
 <body>
   <div class="content">
+    <div id="lang-toggle" class="lang-switch"></div>
     <h1>Felix Seggebäing</h1>
-
-    <p>Willkommen auf meiner Webseite!</p>
-    <p>
-      Aktuell ist hier leider noch nicht so viel los. Aber das soll sich bald ändern, ich arbeite aktiv dran! Wenn Dich
-      der Fortschritt interessiert, schau doch gerne mal in mein <a href="https://github.com/felixsegg"
-        target="_blank">GitHub</a> rein, da findest Du das Projekt dieser Seite.
-    </p>
-
+    <p id="content"></p>
     <div id="menu"></div>
   </div>
 
