--- a/legal/impressum/index.html
+++ b/legal/impressum/index.html
@@ -13,55 +13,32 @@
     <meta name="apple-mobile-web-app-title" content="Felix Seggebäing" />
     <link rel="manifest" href="/manifest.webmanifest" />
 </head>
+
 <body>
     <div class="content">
-        <h1>Impressum</h1>
-        <h2>Adresse</h2>
-        <p>
-            Felix Seggebäing<br>
-            Paul-Schallück-Str. 29<br>
-            50939 Köln
-        </p>
+        <div id="lang-toggle" class="lang-switch"></div>
 
-        <h2>Kontakt</h2>
-        <p>
-            Der Eigentümer der Webseite ist postalisch unter der oben genannten Adresse erreichbar.<br>
-            E-Mail-Kontakt über <a href="mailto:felix@seggebaeing.de">felix(at)seggebaeing.de</a>.
-        </p>
+        <h1 id="title"></h1>
+        <h2 id="address-title"></h2>
+        <p id="address-content"></p>
 
-        <h2>Haftungsausschluss</h2>
-        <h3>Internetpräsenz</h3>
-        <p>Felix Seggebäing übernimmt keinerlei Garantie für die Aktualität, Korrektheit, Vollständigkeit oder Qualität
-            der bereitgestellten Informationen. Grundsätzlich ausgeschlossen sind Haftungsansprüche gegen Felix
-            Seggebäing, welche sich auf Schäden materieller oder ideeller Art beziehen, die durch die Nutzung oder
-            Nichtnutzung der dargebotenen Informationen verursacht wurden, soweit kein nachweislich vorsätzliches oder
-            grob fahrlässiges Verschulden vorliegt.
-        </p>
+        <h2 id="contact-title"></h2>
+        <p id="contact-content"></p>
 
-        <h3>Externe Links</h3>
-        <p>
-            Felix Seggebäing hat keinen Einfluss auf den Inhalt externer Webseiten Dritter. Für die Inhalte extern
-            verlinkter Seiten ist stets der jeweilige Anbieter oder Betreiber dieser Seiten verantwortlich. Felix
-            Seggebäing macht sich diese Inhalte nicht zu eigen und übernimmt keinerlei Gewähr oder Haftung für die dort
-            veröffentlicheten Inhalte. Sollten Inhalte auf den verlinkten Seiten falsch sein oder gegen geltendes Recht,
-            die freiheitliche demokratische Grundordnung, Sitte oder Moral verstoßen, so distanziert sich Felix
-            Seggebäing hiervon ausdrücklich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche
-            Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine
-            permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer
-            Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden derartige Links
-            umgehend entfernt.
-        </p>
+        <h2 id="disclaimer-title"></h2>
+        <h3 id="web-presence-title"></h3>
+        <p id="web-presence-content"></p>
 
-        <h2>Datenschutz</h2>
-        <p>
-            Felix Seggebäing setzt keine Cookies, Analyse- oder Trackingtools ein. Von Felix Seggebäing werden keine
-            personenbezogenen Daten gespeichert oder weiterverarbeitet.
-        </p>
+        <h3 id="external-links-title"></h3>
+        <p id="external-links-content"></p>
 
-    <div id="menu"></div>
-  </div>
-  
-  <div id="footer"></div>
+        <h2 id="privacy-title"></h2>
+        <p id="privacy-content"></p>
+
+        <div id="menu"></div>
+    </div>
+
+    <div id="footer"></div>
     <script src="/js/script.js"></script>
 </body>
 
