--- a/links/index.html
+++ b/links/index.html
@@ -16,7 +16,8 @@
 
 <body>
   <div class="content">
-    <h1>Externe Links</h1>
+    <div id="lang-toggle" class="lang-switch"></div>
+    <h1 id="title"></h1>
     <div class="social-links">
       <a class="social-button" href="https://github.com/felixsegg" target="_blank">
         <img src="/assets/icons/github-white.svg" class="logo-dark" alt="GitHub">
