--- a/theses/index.html
+++ b/theses/index.html
@@ -16,26 +16,21 @@
 
 <body>
   <div class="content">
-    <h1>Abschlussarbeiten</h1>
-    <p>
-      Hier findest Du meine Abschlussarbeiten.
-    </p>
+    <div id="lang-toggle" class="lang-switch"></div>
+    <h1 id="title"></h1>
+    <p id="desc"></p>
 
-    <h2>Bachelorarbeit</h2>
-    <p>
-      Meine Bachelorarbeit liegt gerade noch meinen Betreuern zur Begutachtung vor. Bitte gedulde Dich noch ein wenig,
-      bis ich die finale Bewertung erhalten habe, dann werde ich sie hier bereitstellen! <br>
-      Die Bewertung sollte bis spätestens Mitte August 2025 erfolgt sein.
-    </p>
+    <h2 id="bachelor-title"></h2>
+    <p id="bachelor-desc"></p>
 
     <hr>
 
-    <h2>Masterarbeit</h2>
-    <p>...das dauert noch ein paar Semester ;)</p>
+    <h2 id="master-title"></h2>
+    <p id="master-desc"></p>
 
     <div id="menu"></div>
   </div>
-  
+
   <div id="footer"></div>
 
   <script src="/js/script.js"></script>
