--- a/business/index.html
+++ b/business/index.html
@@ -16,13 +16,12 @@
 
 <body>
   <div class="content">
-    <h1>Geschäftliches</h1>
-    <p>
-      Hier werden Infos zu meiner Arbeit im professionellen Kontext stehen, sobald es dazu ein bisschen mehr zu berichten gibt.
-    </p>
+    <div id="lang-toggle" class="lang-switch"></div>
+    <h1 id="title"></h1>
+    <p id="content"></p>
     <div id="menu"></div>
   </div>
-  
+
   <div id="footer"></div>
 
   <script src="/js/script.js"></script>
