--- a/personal/index.html
+++ b/personal/index.html
@@ -16,10 +16,9 @@
 
 <body>
   <div class="content">
-    <h1>Persönliches</h1>
-    <p>
-      Platzhalter
-    </p>
+    <div id="lang-toggle" class="lang-switch"></div>
+    <h1 id="title"></h1>
+    <p id="content"></p>
     <div id="menu"></div>
   </div>
   
